Added Julia lexer. Thanks to Tobias Frilling.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -131,6 +131,8 @@ file.patterns.json=*.json
 lexer.$(file.patterns.json)=lpeg_json
 file.patterns.jsp=*.jsp
 lexer.$(file.patterns.jsp)=lpeg_jsp
+file.patterns.julia=*.jl
+lexer.$(file.patterns.julia)=lpeg_julia
 file.patterns.latex=*.bbl;*.dtx;*.ins;*.ltx;*.tex;*.sty
 lexer.$(file.patterns.latex)=lpeg_latex
 file.patterns.ledger=*.ledger;*.journal
