Added Pony lexer. Thanks to Murray Calavera.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -183,6 +183,8 @@ file.patterns.pike=*.pike;*.pmod
 lexer.$(file.patterns.pike)=lpeg_pike
 file.patterns.pkgbuild=*.PKGBUILD
 lexer.$(file.patterns.pkgbuild)=lpeg_pkgbuild
+file.patterns.pony=*.pony
+lexer.$(file.patterns.pony)=lpeg_pony
 file.patterns.ps=*.eps;*.ps
 lexer.$(file.patterns.ps)=lpeg_ps
 file.patterns.powershell=*.ps1
