Added Zig lexer. Thanks to Karchnu.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -257,4 +257,6 @@ file.patterns.xtend=*.xtend
 lexer.$(file.patterns.xtend)=lpeg_xtend
 file.patterns.yaml=*.yaml
 lexer.$(file.patterns.yaml)=lpeg_yaml
+file.patterns.zig=*.zig
+lexer.$(file.patterns.zig)=lpeg_zig
 # )
