Added fstab lexer. Thanks to Christian Hesse.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -91,6 +91,8 @@ file.patterns.forth=*.forth;*.frt;*.fth
 lexer.$(file.patterns.forth)=lpeg_forth
 file.patterns.fortran=*.f;*.for;*.ftn;*.fpp;*.f77;*.f90;*.f95;*.f03;*.f08
 lexer.$(file.patterns.fortran)=lpeg_fortran
+file.patterns.fsharp=fstab
+lexer.$(file.patterns.fstab)=lpeg_fstab
 file.patterns.gap=*.g;*.gd;*.gi;*.gap
 lexer.$(file.patterns.gap)=lpeg_gap
 file.patterns.gettext=*.po;*.pot
