Added TypeScript lexer.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -249,6 +249,8 @@ file.patterns.texinfo=*.texi
 lexer.$(file.patterns.texinfo)=lpeg_texinfo
 file.patterns.toml=*.toml
 lexer.$(file.patterns.toml)=lpeg_toml
+file.patterns.typescript=*.ts
+lexer.$(file.patterns.typescript)=lpeg_typescript
 file.patterns.vala=*.vala
 lexer.$(file.patterns.vala)=lpeg_vala
 file.patterns.vcard=*.vcf;*.vcard
