--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -99,6 +99,8 @@ file.patterns.gettext=*.po;*.pot
 lexer.$(file.patterns.gettext)=lpeg_gettext
 file.patterns.gherkin=*.feature
 lexer.$(file.patterns.gherkin)=lpeg_gherkin
+file.patterns.gleam=*.gleam
+lexer.$(file.patterns.gleam)=lpeg_gleam
 file.patterns.glsl=*.glslf;*.glslv
 lexer.$(file.patterns.glsl)=lpeg_glsl
 file.patterns.gnuplot=*.dem;*.plt
