Support Lexilla's new `GetNameSpace()` API and bump SciTE requirements. This requires latest SciTE hg (and thus Lexilla git). Note SciTE 5.0.3 has not been released yet.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -14,265 +14,265 @@ fold.on.zero.sum.lines=0
 
 # Lexer definitions (
 file.patterns.flash=*.as;*.asc
-lexer.$(file.patterns.flash)=lpeg_actionscript
+lexer.$(file.patterns.flash)=lpeg.actionscript
 file.patterns.ada=*.adb;*.ads
-lexer.$(file.patterns.ada)=lpeg_ada
+lexer.$(file.patterns.ada)=lpeg.ada
 file.patterns.antlr=*.g;*.g4
-lexer.$(file.patterns.antlr)=lpeg_antlr
+lexer.$(file.patterns.antlr)=lpeg.antlr
 file.patterns.apdl=*.ans;*.inp;*.mac
-lexer.$(file.patterns.apdl)=lpeg_apdl
+lexer.$(file.patterns.apdl)=lpeg.apdl
 file.patterns.apl=*.apl
-lexer.$(file.patterns.apl)=lpeg_apl
+lexer.$(file.patterns.apl)=lpeg.apl
 file.patterns.applescript=*.applescript
-lexer.$(file.patterns.applescript)=lpeg_applescript
+lexer.$(file.patterns.applescript)=lpeg.applescript
 file.patterns.asm=*.asm;*.ASM;*.s;*.S
-lexer.$(file.patterns.asm)=lpeg_asm
+lexer.$(file.patterns.asm)=lpeg.asm
 file.patterns.asp=*.asa;*.asp;*.hta
-lexer.$(file.patterns.asp)=lpeg_asp
+lexer.$(file.patterns.asp)=lpeg.asp
 file.patterns.autoit=*.au3;*.a3x
-lexer.$(file.patterns.autoit)=lpeg_autoit
+lexer.$(file.patterns.autoit)=lpeg.autoit
 file.patterns.awk=*.awk
-lexer.$(file.patterns.awk)=lpeg_awk
+lexer.$(file.patterns.awk)=lpeg.awk
 file.patterns.batch=*.bat;*.cmd
-lexer.$(file.patterns.batch)=lpeg_batch
+lexer.$(file.patterns.batch)=lpeg.batch
 file.patterns.bibtex=*.bib
-lexer.$(file.patterns.bibtex)=lpeg_bibtex
+lexer.$(file.patterns.bibtex)=lpeg.bibtex
 file.patterns.boo=*.boo
-lexer.$(file.patterns.boo)=lpeg_boo
+lexer.$(file.patterns.boo)=lpeg.boo
 file.patterns.csharp=*.cs
-lexer.$(file.patterns.csharp)=lpeg_csharp
+lexer.$(file.patterns.csharp)=lpeg.csharp
 file.patterns.c=*.c;*.cc;*.C
-lexer.$(file.patterns.c)=lpeg_ansi_c
+lexer.$(file.patterns.c)=lpeg.ansi_c
 file.patterns.cpp=*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
-lexer.$(file.patterns.cpp)=lpeg_cpp
+lexer.$(file.patterns.cpp)=lpeg.cpp
 file.patterns.chuck=*.ck
-lexer.$(file.patterns.chuck)=lpeg_chuck
+lexer.$(file.patterns.chuck)=lpeg.chuck
 file.patterns.clojure=*.clj;*.cljc;*cljs;*.edn
-lexer.$(file.patterns.clojure)=lpeg_clojure
+lexer.$(file.patterns.clojure)=lpeg.clojure
 file.patterns.cmake=*.cmake;*.cmake.in;*.ctest;*.ctest.in
-lexer.$(file.patterns.cmake)=lpeg_cmake
+lexer.$(file.patterns.cmake)=lpeg.cmake
 file.patterns.coffeescript=*.coffee
-lexer.$(file.patterns.coffeescript)=lpeg_coffeescript
+lexer.$(file.patterns.coffeescript)=lpeg.coffeescript
 file.patterns.crystal=*.cr
-lexer.$(file.patterns.crystal)=lpeg_crystal
+lexer.$(file.patterns.crystal)=lpeg.crystal
 file.patterns.css=*.css
-lexer.$(file.patterns.css)=lpeg_css
+lexer.$(file.patterns.css)=lpeg.css
 file.patterns.cuda=*.cu;*.cuh
-lexer.$(file.patterns.cuda)=lpeg_cuda
+lexer.$(file.patterns.cuda)=lpeg.cuda
 file.patterns.d=*.d;*.di
-lexer.$(file.patterns.d)=lpeg_dmd
+lexer.$(file.patterns.d)=lpeg.dmd
 file.patterns.dart=*.dart
-lexer.$(file.patterns.dart)=lpeg_dart
+lexer.$(file.patterns.dart)=lpeg.dart
 file.patterns.desktop=*.desktop
-lexer.$(file.patterns.desktop)=lpeg_desktop
+lexer.$(file.patterns.desktop)=lpeg.desktop
 file.patterns.diff=*.diff;*.patch
-lexer.$(file.patterns.diff)=lpeg_diff
+lexer.$(file.patterns.diff)=lpeg.diff
 file.patterns.dockerfile=Dockerfile
-lexer.$(file.patterns.dockerfile)=lpeg_dockerfile
+lexer.$(file.patterns.dockerfile)=lpeg.dockerfile
 file.patterns.dot=*.dot
-lexer.$(file.patterns.dot)=lpeg_dot
+lexer.$(file.patterns.dot)=lpeg.dot
 file.patterns.eiffel=*.e;*.eif
-lexer.$(file.patterns.eiffel)=lpeg_eiffel
+lexer.$(file.patterns.eiffel)=lpeg.eiffel
 file.patterns.elixir=*.ex;*.exs
 file.patterns.elm=*.elm
-lexer.$(file.patterns.elm)=lpeg_elm
-lexer.$(file.patterns.elixir)=lpeg_elixir
+lexer.$(file.patterns.elm)=lpeg.elm
+lexer.$(file.patterns.elixir)=lpeg.elixir
 file.patterns.erlang=*.erl;*.hrl
-lexer.$(file.patterns.erlang)=lpeg_erlang
+lexer.$(file.patterns.erlang)=lpeg.erlang
 file.patterns.fsharp=*.fs
-lexer.$(file.patterns.fsharp)=lpeg_fsharp
+lexer.$(file.patterns.fsharp)=lpeg.fsharp
 file.patterns.fantom=*.fan
-lexer.$(file.patterns.fantom)=lpeg_fantom
+lexer.$(file.patterns.fantom)=lpeg.fantom
 file.patterns.faust=*.dsp
-lexer.$(file.patterns.faust)=lpeg_faust
+lexer.$(file.patterns.faust)=lpeg.faust
 file.patterns.fish=*.fish
-lexer.$(file.patterns.fish)=lpeg_fish
+lexer.$(file.patterns.fish)=lpeg.fish
 file.patterns.forth=*.forth;*.frt;*.fth
-lexer.$(file.patterns.forth)=lpeg_forth
+lexer.$(file.patterns.forth)=lpeg.forth
 file.patterns.fortran=*.f;*.for;*.ftn;*.fpp;*.f77;*.f90;*.f95;*.f03;*.f08
-lexer.$(file.patterns.fortran)=lpeg_fortran
+lexer.$(file.patterns.fortran)=lpeg.fortran
 file.patterns.fsharp=fstab
-lexer.$(file.patterns.fstab)=lpeg_fstab
+lexer.$(file.patterns.fstab)=lpeg.fstab
 file.patterns.gap=*.g;*.gd;*.gi;*.gap
-lexer.$(file.patterns.gap)=lpeg_gap
+lexer.$(file.patterns.gap)=lpeg.gap
 file.patterns.gettext=*.po;*.pot
-lexer.$(file.patterns.gettext)=lpeg_gettext
+lexer.$(file.patterns.gettext)=lpeg.gettext
 file.patterns.gherkin=*.feature
-lexer.$(file.patterns.gherkin)=lpeg_gherkin
+lexer.$(file.patterns.gherkin)=lpeg.gherkin
 file.patterns.gleam=*.gleam
-lexer.$(file.patterns.gleam)=lpeg_gleam
+lexer.$(file.patterns.gleam)=lpeg.gleam
 file.patterns.glsl=*.glslf;*.glslv
-lexer.$(file.patterns.glsl)=lpeg_glsl
+lexer.$(file.patterns.glsl)=lpeg.glsl
 file.patterns.gnuplot=*.dem;*.plt
-lexer.$(file.patterns.gnuplot)=lpeg_gnuplot
+lexer.$(file.patterns.gnuplot)=lpeg.gnuplot
 file.patterns.go=*.go
-lexer.$(file.patterns.go)=lpeg_go
+lexer.$(file.patterns.go)=lpeg.go
 file.patterns.groovy=*.groovy;*.gvy
-lexer.$(file.patterns.groovy)=lpeg_groovy
+lexer.$(file.patterns.groovy)=lpeg.groovy
 file.patterns.gtkrc=*.gtkrc
-lexer.$(file.patterns.gtkrc)=lpeg_gtkrc
+lexer.$(file.patterns.gtkrc)=lpeg.gtkrc
 file.patterns.haskell=*.hs
-lexer.$(file.patterns.haskell)=lpeg_haskell
+lexer.$(file.patterns.haskell)=lpeg.haskell
 file.patterns.html=*.htm;*.html;*.shtm;*.shtml;*.xhtml
-lexer.$(file.patterns.html)=lpeg_html
+lexer.$(file.patterns.html)=lpeg.html
 file.patterns.icon=*.icn
-lexer.$(file.patterns.icon)=lpeg_icon
+lexer.$(file.patterns.icon)=lpeg.icon
 file.patterns.idl=*.idl;*.odl
-lexer.$(file.patterns.idl)=lpeg_idl
+lexer.$(file.patterns.idl)=lpeg.idl
 file.patterns.inform=*.inf;*.ni
-lexer.$(file.patterns.inform)=lpeg_inform
+lexer.$(file.patterns.inform)=lpeg.inform
 file.patterns.ini=*.cfg;*.cnf;*.inf;*.ini;*.reg
-lexer.$(file.patterns.ini)=lpeg_ini
+lexer.$(file.patterns.ini)=lpeg.ini
 file.patterns.io_lang=*.io
-lexer.$(file.patterns.io_lang)=lpeg_io_lang
+lexer.$(file.patterns.io_lang)=lpeg.io_lang
 file.patterns.java=*.bsh;*.java
-lexer.$(file.patterns.java)=lpeg_java
+lexer.$(file.patterns.java)=lpeg.java
 file.patterns.js=*.js;*.jsfl
-lexer.$(file.patterns.js)=lpeg_javascript
+lexer.$(file.patterns.js)=lpeg.javascript
 file.patterns.jq=*.jq
-lexer.$(file.patterns.jq)=lpeg_jq
+lexer.$(file.patterns.jq)=lpeg.jq
 file.patterns.json=*.json
-lexer.$(file.patterns.json)=lpeg_json
+lexer.$(file.patterns.json)=lpeg.json
 file.patterns.jsp=*.jsp
-lexer.$(file.patterns.jsp)=lpeg_jsp
+lexer.$(file.patterns.jsp)=lpeg.jsp
 file.patterns.julia=*.jl
-lexer.$(file.patterns.julia)=lpeg_julia
+lexer.$(file.patterns.julia)=lpeg.julia
 file.patterns.latex=*.bbl;*.dtx;*.ins;*.ltx;*.tex;*.sty
-lexer.$(file.patterns.latex)=lpeg_latex
+lexer.$(file.patterns.latex)=lpeg.latex
 file.patterns.ledger=*.ledger;*.journal
-lexer.$(file.patterns.ledger)=lpeg_ledger
+lexer.$(file.patterns.ledger)=lpeg.ledger
 file.patterns.less=*.less
-lexer.$(file.patterns.less)=lpeg_less
+lexer.$(file.patterns.less)=lpeg.less
 file.patterns.lilypond=*.lily;*.ly
-lexer.$(file.patterns.lilypond)=lpeg_lilypond
+lexer.$(file.patterns.lilypond)=lpeg.lilypond
 file.patterns.lisp=*.cl;*.el;*.lisp;*.lsp
-lexer.$(file.patterns.lisp)=lpeg_lisp
+lexer.$(file.patterns.lisp)=lpeg.lisp
 file.patterns.litcoffee=*.litcoffee
-lexer.$(file.patterns.litcoffee)=lpeg_litcoffee
+lexer.$(file.patterns.litcoffee)=lpeg.litcoffee
 file.patterns.logtalk=*.lgt
-lexer.$(file.patterns.logtalk)=lpeg_logtalk
+lexer.$(file.patterns.logtalk)=lpeg.logtalk
 file.patterns.lua=*.lua
-lexer.$(file.patterns.lua)=lpeg_lua
+lexer.$(file.patterns.lua)=lpeg.lua
 file.patterns.makefile=GNUmakefile;*.iface;*.mak;makefile;Makefile
-lexer.$(file.patterns.makefile)=lpeg_makefile
+lexer.$(file.patterns.makefile)=lpeg.makefile
 file.patterns.man=*.1;*.2;*.3;*.4;*.5;*.6;*.7;*.8;*.9;*.1x;*.2x;*.3x;*.4x;*.5x;*.6x;*.7x;*.8x;*.9x
-lexer.$(file.patterns.man)=lpeg_man
+lexer.$(file.patterns.man)=lpeg.man
 file.patterns.markdown=*.md
-lexer.$(file.patterns.markdown)=lpeg_markdown
+lexer.$(file.patterns.markdown)=lpeg.markdown
 file.patterns.meson=meson.build
-lexer.$(file.patterns.meson)=lpeg_meson
+lexer.$(file.patterns.meson)=lpeg.meson
 file.patterns.moonscript=*.moon
-lexer.$(file.patterns.moonscript)=lpeg_moonscript
+lexer.$(file.patterns.moonscript)=lpeg.moonscript
 file.patterns.myrddin=*.myr
-lexer.$(file.patterns.myrddin)=lpeg_myrddin
+lexer.$(file.patterns.myrddin)=lpeg.myrddin
 file.patterns.nemerle=*.n
-lexer.$(file.patterns.nemerle)=lpeg_nemerle
+lexer.$(file.patterns.nemerle)=lpeg.nemerle
 file.patterns.networkd=*.link;*.network;*.netdev
-lexer.$(file.patterns.networkd)=lpeg_networkd
+lexer.$(file.patterns.networkd)=lpeg.networkd
 file.patterns.nim=*.nim
-lexer.$(file.patterns.nim)=lpeg_nim
+lexer.$(file.patterns.nim)=lpeg.nim
 file.patterns.nsis=*.nsh;*.nsi;*.nsis
-lexer.$(file.patterns.nsis)=lpeg_nsis
+lexer.$(file.patterns.nsis)=lpeg.nsis
 file.patterns.objective_c=*.m;*.mm;*.objc
-lexer.$(file.patterns.objective_c)=lpeg_objective_c
+lexer.$(file.patterns.objective_c)=lpeg.objective_c
 file.patterns.caml=*.caml;*.ml;*.mli;*.mll;*.mly
-lexer.$(file.patterns.caml)=lpeg_caml
+lexer.$(file.patterns.caml)=lpeg.caml
 file.patterns.pascal=*.dpk;*.dpr;*.p;*.pas
-lexer.$(file.patterns.pascal)=lpeg_pascal
+lexer.$(file.patterns.pascal)=lpeg.pascal
 file.patterns.perl=*.al;*.perl;*.pl;*.pm;*.pod
-lexer.$(file.patterns.perl)=lpeg_perl
+lexer.$(file.patterns.perl)=lpeg.perl
 file.patterns.php=*.inc;*.php;*.php3;*.php4;*.phtml
-lexer.$(file.patterns.php)=lpeg_php
+lexer.$(file.patterns.php)=lpeg.php
 file.patterns.pico8=*.p8
-lexer.$(file.patterns.pico8)=lpeg_pico8
+lexer.$(file.patterns.pico8)=lpeg.pico8
 file.patterns.pike=*.pike;*.pmod
-lexer.$(file.patterns.pike)=lpeg_pike
+lexer.$(file.patterns.pike)=lpeg.pike
 file.patterns.pkgbuild=*.PKGBUILD
-lexer.$(file.patterns.pkgbuild)=lpeg_pkgbuild
+lexer.$(file.patterns.pkgbuild)=lpeg.pkgbuild
 file.patterns.pony=*.pony
-lexer.$(file.patterns.pony)=lpeg_pony
+lexer.$(file.patterns.pony)=lpeg.pony
 file.patterns.ps=*.eps;*.ps
-lexer.$(file.patterns.ps)=lpeg_ps
+lexer.$(file.patterns.ps)=lpeg.ps
 file.patterns.powershell=*.ps1
-lexer.$(file.patterns.powershell)=lpeg_powershell
+lexer.$(file.patterns.powershell)=lpeg.powershell
 file.patterns.prolog=*.prolog
-lexer.$(file.patterns.prolog)=lpeg_prolog
+lexer.$(file.patterns.prolog)=lpeg.prolog
 file.patterns.props=*.props;*.properties
-lexer.$(file.patterns.props)=lpeg_props
+lexer.$(file.patterns.props)=lpeg.props
 file.patterns.protobuf=*.proto
-lexer.$(file.patterns.protobuf)=lpeg_protobuf
+lexer.$(file.patterns.protobuf)=lpeg.protobuf
 file.patterns.pure=*.pure
-lexer.$(file.patterns.pure)=lpeg_pure
+lexer.$(file.patterns.pure)=lpeg.pure
 file.patterns.py=*.sc;*.py;*.pyw
-lexer.$(file.patterns.py)=lpeg_python
+lexer.$(file.patterns.py)=lpeg.python
 file.patterns.r=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail;*.S
-lexer.$(file.patterns.r)=lpeg_rstats
+lexer.$(file.patterns.r)=lpeg.rstats
 file.patterns.reason=*.re
-lexer.$(file.patterns.reason)=lpeg_reason
+lexer.$(file.patterns.reason)=lpeg.reason
 file.patterns.rebol=*.r;*.reb
-lexer.$(file.patterns.rebol)=lpeg_rebol
+lexer.$(file.patterns.rebol)=lpeg.rebol
 file.patterns.rest=*.rst
-lexer.$(file.patterns.rest)=lpeg_rest
+lexer.$(file.patterns.rest)=lpeg.rest
 file.patterns.rexx=*.orx;*.rex
-lexer.$(file.patterns.rexx)=lpeg_rexx
+lexer.$(file.patterns.rexx)=lpeg.rexx
 file.patterns.rhtml=*.erb;*.rhtml
-lexer.$(file.patterns.rhtml)=lpeg_rhtml
+lexer.$(file.patterns.rhtml)=lpeg.rhtml
 file.patterns.routeros=*.rsc
-lexer.$(file.patterns.routeros)=lpeg_routeros
+lexer.$(file.patterns.routeros)=lpeg.routeros
 file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
-lexer.$(file.patterns.rb)=lpeg_ruby
+lexer.$(file.patterns.rb)=lpeg.ruby
 file.patterns.rust=*.rs
-lexer.$(file.patterns.rust)=lpeg_rust
+lexer.$(file.patterns.rust)=lpeg.rust
 file.patterns.sass=*.sass;*.scss
-lexer.$(file.patterns.sass)=lpeg_sass
+lexer.$(file.patterns.sass)=lpeg.sass
 file.patterns.scala=*.scala
-lexer.$(file.patterns.scala)=lpeg_scala
+lexer.$(file.patterns.scala)=lpeg.scala
 file.patterns.scheme=*.sch;*.scm
-lexer.$(file.patterns.scheme)=lpeg_scheme
+lexer.$(file.patterns.scheme)=lpeg.scheme
 file.patterns.bash=*.bash;*.bashrc;*.bash_profile;*.configure;*.csh;*.sh;*.zsh
-lexer.$(file.patterns.bash)=lpeg_bash
+lexer.$(file.patterns.bash)=lpeg.bash
 file.patterns.smalltalk=*.changes;*.st;*.sources
-lexer.$(file.patterns.smalltalk)=lpeg_smalltalk
+lexer.$(file.patterns.smalltalk)=lpeg.smalltalk
 file.patterns.sml=*.sml;*.fun;*.sig
-lexer.$(file.patterns.sml)=lpeg_sml
+lexer.$(file.patterns.sml)=lpeg.sml
 file.patterns.snobol4=*.sno;*.SNO
-lexer.$(file.patterns.snobol4)=lpeg_snobol4
+lexer.$(file.patterns.snobol4)=lpeg.snobol4
 file.patterns.spin=*.spin
-lexer.$(file.patterns.spin)=lpeg_spin
+lexer.$(file.patterns.spin)=lpeg.spin
 file.patterns.sql=*.ddl;*.sql
-lexer.$(file.patterns.sql)=lpeg_sql
+lexer.$(file.patterns.sql)=lpeg.sql
 file.patterns.systemd=*.automount;*.device;*.mount;*.path;*.scope;*.service;*.slice;*.socket;*.swap;*.target;*.timer
-lexer.$(file.patterns.systemd)=lpeg_systemd
+lexer.$(file.patterns.systemd)=lpeg.systemd
 file.patterns.taskpaper=*.taskpaper
-lexer.$(file.patterns.taskpaper)=lpeg_taskpaper
+lexer.$(file.patterns.taskpaper)=lpeg.taskpaper
 file.patterns.tcl=*.tcl;*.tk
-lexer.$(file.patterns.tcl)=lpeg_tcl
+lexer.$(file.patterns.tcl)=lpeg.tcl
 file.patterns.texinfo=*.texi
-lexer.$(file.patterns.texinfo)=lpeg_texinfo
+lexer.$(file.patterns.texinfo)=lpeg.texinfo
 file.patterns.toml=*.toml
-lexer.$(file.patterns.toml)=lpeg_toml
+lexer.$(file.patterns.toml)=lpeg.toml
 file.patterns.typescript=*.ts
-lexer.$(file.patterns.typescript)=lpeg_typescript
+lexer.$(file.patterns.typescript)=lpeg.typescript
 file.patterns.vala=*.vala
-lexer.$(file.patterns.vala)=lpeg_vala
+lexer.$(file.patterns.vala)=lpeg.vala
 file.patterns.vcard=*.vcf;*.vcard
-lexer.$(file.patterns.vcard)=lpeg_vcard
+lexer.$(file.patterns.vcard)=lpeg.vcard
 file.patterns.verilog=*.v;*.ver
-lexer.$(file.patterns.verilog)=lpeg_verilog
+lexer.$(file.patterns.verilog)=lpeg.verilog
 file.patterns.vhdl=*.vh;*.vhd;*.vhdl
-lexer.$(file.patterns.vhdl)=lpeg_vhdl
+lexer.$(file.patterns.vhdl)=lpeg.vhdl
 file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba;*.vbs
-lexer.$(file.patterns.vb)=lpeg_vb
+lexer.$(file.patterns.vb)=lpeg.vb
 file.patterns.wsf=*.wsf
-lexer.$(file.patterns.wsf)=lpeg_wsf
+lexer.$(file.patterns.wsf)=lpeg.wsf
 file.patterns.xml=*.dtd;*.svg;*.xml;*.xsd;*.xsl;*.xslt;*.xul
-lexer.$(file.patterns.xml)=lpeg_xml
+lexer.$(file.patterns.xml)=lpeg.xml
 file.patterns.xs=*.xs;*.xsin;*.xsrc
-lexer.$(file.patterns.xs)=lpeg_xs
+lexer.$(file.patterns.xs)=lpeg.xs
 file.patterns.xtend=*.xtend
-lexer.$(file.patterns.xtend)=lpeg_xtend
+lexer.$(file.patterns.xtend)=lpeg.xtend
 file.patterns.yaml=*.yaml
-lexer.$(file.patterns.yaml)=lpeg_yaml
+lexer.$(file.patterns.yaml)=lpeg.yaml
 file.patterns.zig=*.zig
-lexer.$(file.patterns.zig)=lpeg_zig
+lexer.$(file.patterns.zig)=lpeg.zig
 # )
