Fixed workflow for GitHub releases.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
           # Output version information for use in later steps.
           version="${{ github.event.inputs.tag }}"
           if [[ -z $version ]]; then
-            version=`ls -1 scintillua_*.zip | head -1 sed 's/[^_]\+_\(.\+\)\.zip/\1/;'`
+            version=`ls -1 scintillua_*.zip | head -1 | sed 's/[^_]\+_\(.\+\)\.zip/\1/;'`
           fi
           echo "::set-output name=version::$version"
       - name: Upload artifacts
