Add support for Hare language
https://harelang.org

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -111,6 +111,8 @@ file.patterns.groovy=*.groovy;*.gvy
 lexer.$(file.patterns.groovy)=lpeg.groovy
 file.patterns.gtkrc=*.gtkrc
 lexer.$(file.patterns.gtkrc)=lpeg.gtkrc
+file.patterns.hare=*.ha
+lexer.$(file.patterns.hare)=lpeg.hare
 file.patterns.haskell=*.hs
 lexer.$(file.patterns.haskell)=lpeg.haskell
 file.patterns.html=*.htm;*.html;*.shtm;*.shtml;*.xhtml
