Added RPM spec lexer. Thanks to Matej Cepl.

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -221,6 +221,8 @@ file.patterns.rhtml=*.erb;*.rhtml
 lexer.$(file.patterns.rhtml)=lpeg.rhtml
 file.patterns.routeros=*.rsc
 lexer.$(file.patterns.routeros)=lpeg.routeros
+file.patterns.rpmspec=*.spec
+lexer.$(file.patterns.rpmspec)=lpeg.rpmspec
 file.patterns.rb=Rakefile;*.rake;*.rb;*.rbw
 lexer.$(file.patterns.rb)=lpeg.ruby
 file.patterns.rust=*.rs
