Add modern rewrite of gemini lexer from vis.
Mistakenly considered included as a part of port of #13 in #68, but it has never been.

Project Gemini (https://gemini.circumlunar.space/) uses text format of MIME type text/gemini (*.gmi). There are syntax highlighters for it for Emacs (https://git.carcosa.net/jmcbray/gemini.el/src/branch/master/gemini-mode.el) and Vim (https://tildegit.org/sloum/gemini-vim-syntax).

--- a/lexers/lpeg.properties
+++ b/lexers/lpeg.properties
@@ -95,6 +95,9 @@ file.patterns.fsharp=fstab
 lexer.$(file.patterns.fstab)=lpeg.fstab
 file.patterns.gap=*.g;*.gd;*.gi;*.gap
 lexer.$(file.patterns.gap)=lpeg.gap
+# mime "text/gemini"
+file.patterns.gemini=*.gmi
+lexer.$(file.patterns.gemini)=lpeg.gemini
 file.patterns.gettext=*.po;*.pot
 lexer.$(file.patterns.gettext)=lpeg.gettext
 file.patterns.gherkin=*.feature
