--- a/themes/light.properties
+++ b/themes/light.properties
@@ -65,12 +65,16 @@ scintillua.styles.call_tip=fore:$(scintillua.colors.light_black),back:$(scintill
 scintillua.styles.fold_display_text=fore:$(scintillua.colors.grey)
 
 # Predefined token styles.
+scintillua.styles.attribute=fore:$(scintillua.colors.dark_lavender)
 scintillua.styles.class=fore:$(scintillua.colors.yellow)
 scintillua.styles.comment=fore:$(scintillua.colors.grey)
-scintillua.styles.constant=fore:$(scintillua.colors.red)
+scintillua.styles.constant=
+scintillua.styles.constant.builtin=fore:$(scintillua.colors.red)
 scintillua.styles.embedded=fore:$(scintillua.colors.dark_blue),back:$(scintillua.colors.dark_white)
 scintillua.styles.error=fore:$(scintillua.colors.red),italics
-scintillua.styles.function=fore:$(scintillua.colors.dark_orange)
+scintillua.styles.function=
+scintillua.styles.function.builtin=fore:$(scintillua.colors.dark_orange)
+scintillua.styles.function.method=
 scintillua.styles.identifier=
 scintillua.styles.keyword=fore:$(scintillua.colors.dark_blue)
 scintillua.styles.label=fore:$(scintillua.colors.dark_orange)
@@ -79,6 +83,7 @@ scintillua.styles.operator=fore:$(scintillua.colors.purple)
 scintillua.styles.preprocessor=fore:$(scintillua.colors.dark_yellow)
 scintillua.styles.regex=fore:$(scintillua.colors.dark_green)
 scintillua.styles.string=fore:$(scintillua.colors.green)
+scintillua.styles.tag=fore:$(scintillua.colors.dark_blue)
 scintillua.styles.type=fore:$(scintillua.colors.lavender)
 scintillua.styles.variable=fore:$(scintillua.colors.dark_lavender)
 scintillua.styles.whitespace=
