Do not utilize SciTE's keyword lists by default.

--- a/scintillua.properties
+++ b/scintillua.properties
@@ -13,6 +13,8 @@ fold.scintillua.line.groups=0
 fold.scintillua.on.zero.sum.lines=0
 fold.scintillua.compact=0
 
+# This import is relative to the file importing scintillua (e.g. SciTEGlobal.properties),
+# not relative to this file.
 import scintillua/themes/scite
 
 # Lexer definitions (
@@ -283,3 +285,13 @@ lexer.$(file.patterns.yaml)=scintillua.yaml
 file.patterns.zig=*.zig
 lexer.$(file.patterns.zig)=scintillua.zig
 # )
+
+keywords.*=scintillua
+keywords2.*=scintillua
+keywords3.*=scintillua
+keywords4.*=scintillua
+keywords5.*=scintillua
+keywords6.*=scintillua
+keywords7.*=scintillua
+keywords8.*=scintillua
+keywords9.*=scintillua
