--- a/themes/light.properties
+++ b/themes/light.properties
@@ -65,8 +65,10 @@ scintillua.styles.call_tip=fore:$(scintillua.colors.light_black),back:$(scintill
 scintillua.styles.fold_display_text=fore:$(scintillua.colors.grey)
 
 # Predefined token styles.
-scintillua.styles.attribute=fore:$(scintillua.colors.dark_lavender)
+scintillua.styles.attribute=fore:$(scintillua.colors.lavender)
+scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.yellow)
+scintillua.styles.code=back:$(scintillua.colors.dark_white),eolfilled=true
 scintillua.styles.comment=fore:$(scintillua.colors.grey)
 scintillua.styles.constant=
 scintillua.styles.constant.builtin=fore:$(scintillua.colors.red)
@@ -76,16 +78,21 @@ scintillua.styles.function=
 scintillua.styles.function.builtin=fore:$(scintillua.colors.dark_orange)
 scintillua.styles.function.method=
 scintillua.styles.identifier=
+scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.dark_blue)
 scintillua.styles.label=fore:$(scintillua.colors.dark_orange)
+scintillua.styles.link=underlined
 scintillua.styles.number=fore:$(scintillua.colors.teal)
 scintillua.styles.operator=fore:$(scintillua.colors.purple)
 scintillua.styles.preprocessor=fore:$(scintillua.colors.dark_yellow)
 scintillua.styles.regex=fore:$(scintillua.colors.dark_green)
 scintillua.styles.string=fore:$(scintillua.colors.green)
 scintillua.styles.tag=fore:$(scintillua.colors.dark_blue)
+scintillua.styles.title=fore:$(scintillua.colors.red)
 scintillua.styles.type=fore:$(scintillua.colors.lavender)
-scintillua.styles.variable=fore:$(scintillua.colors.dark_lavender)
+scintillua.styles.underline=underlined
+scintillua.styles.variable=
+scintillua.styles.variable.builtin=fore:$(scintillua.colors.dark_lavender)
 scintillua.styles.whitespace=
 
 # Lua
