--- a/themes/light.properties
+++ b/themes/light.properties
@@ -85,6 +85,7 @@ scintillua.styles.link=underlined
 scintillua.styles.number=fore:$(scintillua.colors.teal)
 scintillua.styles.operator=fore:$(scintillua.colors.purple)
 scintillua.styles.preprocessor=fore:$(scintillua.colors.dark_yellow)
+scintillua.styles.reference=underlined
 scintillua.styles.regex=fore:$(scintillua.colors.dark_green)
 scintillua.styles.string=fore:$(scintillua.colors.green)
 scintillua.styles.tag=fore:$(scintillua.colors.dark_blue)
