Updated light theme. Still a work in progress.

--- a/themes/light.properties
+++ b/themes/light.properties
@@ -65,13 +65,13 @@ scintillua.styles.call_tip=fore:$(scintillua.colors.light_black),back:$(scintill
 scintillua.styles.fold_display_text=fore:$(scintillua.colors.grey)
 
 # Predefined token styles.
-scintillua.styles.attribute=fore:$(scintillua.colors.lavender)
+scintillua.styles.attribute=fore:$(scintillua.colors.dark_lavender)
 scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.yellow)
 scintillua.styles.code=back:$(scintillua.colors.dark_white),eolfilled=true
 scintillua.styles.comment=fore:$(scintillua.colors.grey)
 scintillua.styles.constant=
-scintillua.styles.constant.builtin=fore:$(scintillua.colors.red)
+scintillua.styles.constant.builtin=fore:$(scintillua.colors.dark_teal)
 scintillua.styles.embedded=fore:$(scintillua.colors.dark_blue),back:$(scintillua.colors.dark_white)
 scintillua.styles.error=fore:$(scintillua.colors.red),italics
 scintillua.styles.function=
@@ -90,41 +90,25 @@ scintillua.styles.regex=fore:$(scintillua.colors.dark_green)
 scintillua.styles.string=fore:$(scintillua.colors.green)
 scintillua.styles.tag=fore:$(scintillua.colors.dark_blue)
 scintillua.styles.title=fore:$(scintillua.colors.red)
-scintillua.styles.type=fore:$(scintillua.colors.lavender)
+scintillua.styles.type=fore:$(scintillua.colors.dark_lavender)
 scintillua.styles.underline=underlined
 scintillua.styles.variable=
-scintillua.styles.variable.builtin=fore:$(scintillua.colors.dark_lavender)
+scintillua.styles.variable.builtin=fore:$(scintillua.colors.lavender)
 scintillua.styles.whitespace=
 
-# Lua
-scintillua.styles.deprecated_function=$(scintillua.styles.function),italics
-scintillua.styles.library=$(scintillua.styles.type)
-scintillua.styles.deprecated_library=$(scintillua.styles.type),italics
-scintillua.styles.longstring=$(scintillua.styles.string)
-scintillua.styles.attribute=$(scintillua.styles.class)
+# CSS
+scintillua.styles.property=$(scintillua.styles.attribute)
+scintillua.styles.pseudoclass=
+scintillua.styles.pseudoelement=
+
+# Diff
+scintillua.styles.addition=fore:$(scintillua.colors.green)
+scintillua.styles.deletion=fore:$(scintillua.colors.red)
+scintillua.styles.change=fore:$(scintillua.colors.yellow)
 
 # HTML
-scintillua.styles.doctype=$(scintillua.styles.comment)
-scintillua.styles.single_element=$(scintillua.styles.keyword)
-scintillua.styles.element=$(scintillua.styles.keyword)
-scintillua.styles.unknown_element=$(scintillua.styles.keyword),italics
-#scintillua.styles.attribute=$(scintillua.styles.type)
-scintillua.styles.unknown_attribute=$(scintillua.styles.type),italics
-scintillua.styles.entity=$(scintillua.styles.comment)
+scintillua.styles.tag.unknown=$(scintillua.styles.tag),italics
+scintillua.styles.attribute.unknown=$(scintillua.styles.attribute),italics
 
-# CSS
-scintillua.styles.property=$(scintillua.styles.keyword)
-scintillua.styles.value=$(scintillua.styles.constant)
-scintillua.styles.color=$(scintillua.styles.number)
-scintillua.styles.pseudoclass=$(scintillua.styles.constant)
-scintillua.styles.pseudoelement=$(scintillua.styles.constant)
-scintillua.styles.unit=$(scintillua.styles.number)
-
-# PHP
-scintillua.styles.php_tag=$(scintillua.styles.embedded)
-
-# Ruby
-scintillua.styles.symbol=$(scintillua.styles.constant)
-
-# RHTML
-scintillua.styles.rhtml_tag=$(scintillua.styles.embedded)
+# YAML
+scintillua.styles.error.indent=back:$(scintillua.colors.red)
