--- a/themes/light.properties
+++ b/themes/light.properties
@@ -64,7 +64,7 @@ scintillua.styles.indent_guide=fore:$(scintillua.colors.dark_white)
 scintillua.styles.call_tip=fore:$(scintillua.colors.light_black),back:$(scintillua.colors.dark_white)
 scintillua.styles.fold_display_text=fore:$(scintillua.colors.grey)
 
-# Predefined token styles.
+# Tag styles.
 scintillua.styles.attribute=fore:$(scintillua.colors.dark_lavender)
 scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.yellow)
@@ -72,7 +72,7 @@ scintillua.styles.code=back:$(scintillua.colors.dark_white),eolfilled=true
 scintillua.styles.comment=fore:$(scintillua.colors.grey)
 scintillua.styles.constant=
 scintillua.styles.constant.builtin=fore:$(scintillua.colors.dark_teal)
-scintillua.styles.embedded=fore:$(scintillua.colors.dark_blue),back:$(scintillua.colors.dark_white)
+scintillua.styles.embedded=back:$(scintillua.colors.dark_white)
 scintillua.styles.error=fore:$(scintillua.colors.red),italics
 scintillua.styles.function=
 scintillua.styles.function.builtin=fore:$(scintillua.colors.dark_orange)
@@ -80,7 +80,7 @@ scintillua.styles.function.method=
 scintillua.styles.identifier=
 scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.dark_blue)
-scintillua.styles.label=fore:$(scintillua.colors.dark_orange)
+scintillua.styles.label=fore:$(scintillua.colors.dark_pink)
 scintillua.styles.link=underlined
 scintillua.styles.number=fore:$(scintillua.colors.teal)
 scintillua.styles.operator=fore:$(scintillua.colors.purple)
@@ -89,11 +89,11 @@ scintillua.styles.reference=underlined
 scintillua.styles.regex=fore:$(scintillua.colors.dark_green)
 scintillua.styles.string=fore:$(scintillua.colors.green)
 scintillua.styles.tag=fore:$(scintillua.colors.dark_blue)
-scintillua.styles.title=fore:$(scintillua.colors.red)
+scintillua.styles.title=fore:$(scintillua.colors.purple)
 scintillua.styles.type=fore:$(scintillua.colors.dark_lavender)
 scintillua.styles.underline=underlined
 scintillua.styles.variable=
-scintillua.styles.variable.builtin=fore:$(scintillua.colors.lavender)
+scintillua.styles.variable.builtin=fore:$(scintillua.colors.dark_yellow)
 scintillua.styles.whitespace=
 
 # CSS
