--- a/themes/scite.properties
+++ b/themes/scite.properties
@@ -12,6 +12,9 @@ scintillua.colors.black=#000000
 scintillua.colors.grey=#808080
 scintillua.colors.white=#FFFFFF
 
+scintillua.colors.light_red=#FF0000
+scintillua.colors.light_blue=#0040E0
+
 # Default font.
 if PLAT_WIN
   scintillua.styles.font.base=font:Courier New,size:10
@@ -29,20 +32,50 @@ scintillua.styles.call_tip=fore:$(scintillua.colors.white),back:#444444
 scintillua.styles.fold_display_text=fore:$(scintillua.colors.grey)
 
 # Predefined token styles.
+scintillua.styles.attribute=fore:$(scintillua.colors.teal)
+scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.black),bold
+scintillua.styles.code=
 scintillua.styles.comment=fore:$(scintillua.colors.green)
-scintillua.styles.constant=fore:$(scintillua.colors.teal),bold
+scintillua.styles.constant=
+scintillua.styles.constant.builtin=fore:$(scintillua.colors.teal),bold
 scintillua.styles.embedded=fore:$(scintillua.colors.blue)
 scintillua.styles.error=fore:$(scintillua.colors.red)
-scintillua.styles.function=fore:$(scintillua.colors.black),bold
+scintillua.styles.function=
+scintillua.styles.function.builtin=fore:$(scintillua.colors.black),bold
+scintillua.styles.function.method=
 scintillua.styles.identifier=
+scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.blue),bold
 scintillua.styles.label=fore:$(scintillua.colors.teal),bold
+scintillua.styles.link=underlined
 scintillua.styles.number=fore:$(scintillua.colors.teal)
 scintillua.styles.operator=fore:$(scintillua.colors.black),bold
 scintillua.styles.preprocessor=fore:$(scintillua.colors.yellow)
+scintillua.styles.reference=underlined
 scintillua.styles.regex=$(scintillua.styles.string)
 scintillua.styles.string=fore:$(scintillua.colors.purple)
+scintillua.styles.tag=fore:$(scintillua.colors.blue)
+scintillua.styles.title=
 scintillua.styles.type=fore:$(scintillua.colors.blue)
-scintillua.styles.variable=fore:$(scintillua.colors.black)
+scintillua.styles.underline=
+scintillua.styles.variable=
+scintillua.styles.variable.builtin=fore:$(scintillua.colors.black)
 scintillua.styles.whitespace=
+
+# CSS
+scintillua.styles.property=$(scintillua.styles.attribute)
+scintillua.styles.pseudoclass=
+scintillua.styles.pseudoelement=
+
+# Diff
+scintillua.styles.addition=fore:$(scintillua.colors.green)
+scintillua.styles.deletion=fore:$(scintillua.colors.red)
+scintillua.styles.change=fore:$(scintillua.colors.yellow)
+
+# HTML
+scintillua.styles.tag.unknown=$(scintillua.colors.light_red)
+scintillua.styles.attribute.unknown=$(scintillua.colors.light_red)
+
+# YAML
+scintillua.styles.error.indent=back:$(scintillua.colors.red)
