--- a/themes/dark.properties
+++ b/themes/dark.properties
@@ -64,21 +64,51 @@ scintillua.styles.indent_guide=fore:$(scintillua.colors.light_black)
 scintillua.styles.call_tip=fore:$(scintillua.colors.light_grey),back:$(scintillua.colors.light_black)
 scintillua.styles.fold_display_text=fore:$(scintillua.colors.dark_grey)
 
-# Predefined token styles.
+# Predefined tag styles.
+scintillua.styles.attribute=fore:$(scintillua.colors.lavender)
+scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.light_yellow)
+scintillua.styles.code=back:$(scintillua.colors.light_black),eolfilled
 scintillua.styles.comment=fore:$(scintillua.colors.dark_grey)
-scintillua.styles.constant=fore:$(scintillua.colors.red)
-scintillua.styles.embedded=fore:$(scintillua.colors.dark_white),back:$(scintillua.colors.light_black)
+scintillua.styles.constant=
+scintillua.styles.constant.builtin=fore:$(scintillua.colors.light_teal)
+scintillua.styles.embedded=back:$(scintillua.colors.light_black)
 scintillua.styles.error=fore:$(scintillua.colors.red),italics
-scintillua.styles.function=fore:$(scintillua.colors.blue)
+scintillua.styles.function=
+scintillua.styles.function.builtin=fore:$(scintillua.colors.blue)
+scintillua.styles.function.method=
 scintillua.styles.identifier=
+scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.dark_white)
-scintillua.styles.label=fore:$(scintillua.colors.orange)
+scintillua.styles.label=fore:$(scintillua.colors.dark_pink)
+scintillua.styles.link=underlined
 scintillua.styles.number=fore:$(scintillua.colors.teal)
 scintillua.styles.operator=fore:$(scintillua.colors.yellow)
 scintillua.styles.preprocessor=fore:$(scintillua.colors.purple)
+scintillua.styles.reference=underlined
 scintillua.styles.regex=fore:$(scintillua.colors.light_green)
 scintillua.styles.string=fore:$(scintillua.colors.green)
+scintillua.styles.tag=fore:$(scintillua.colors.dark_white)
+scintillua.styles.title=fore:$(scintillua.colors.yellow)
 scintillua.styles.type=fore:$(scintillua.colors.lavender)
-scintillua.styles.variable=fore:$(scintillua.colors.light_blue)
+scintillua.styles.underline=underlined
+scintillua.styles.variable=
+scintillua.styles.variable.builtin=fore:$(scintillua.colors.light_blue)
 scintillua.styles.whitespace=
+
+# CSS
+scintillua.styles.property=$(scintillua.styles.attribute)
+scintillua.styles.pseudoclass=
+scintillua.styles.pseudoelement=
+
+# Diff
+scintillua.styles.addition=fore:$(scintillua.colors.green)
+scintillua.styles.deletion=fore:$(scintillua.colors.red)
+scintillua.styles.change=fore:$(scintillua.colors.yellow)
+
+# HTML
+scintillua.styles.tag.unknown=$(scintillua.styles.tag),italics
+scintillua.styles.attribute.unknown=$(scintillua.styles.attribute),italics
+
+# YAML
+scintillua.styles.error.indent=back:$(scintillua.colors.red)
