Added Gemini, git-rebase, and strace lexers from vis.

--- a/scintillua.properties
+++ b/scintillua.properties
@@ -100,6 +100,8 @@ file.patterns.fsharp=fstab
 lexer.$(file.patterns.fstab)=scintillua.fstab
 file.patterns.gap=*.g;*.gd;*.gi;*.gap
 lexer.$(file.patterns.gap)=scintillua.gap
+file.patterns.gemini=*.gmi
+lexer.$(file.patterns.gemini)=scintillua.gemini
 file.patterns.gettext=*.po;*.pot
 lexer.$(file.patterns.gettext)=scintillua.gettext
 file.patterns.gherkin=*.feature
