Renamed `lexer.TITLE` tag to `lexer.HEADING`.

--- a/themes/dark.properties
+++ b/themes/dark.properties
@@ -77,6 +77,7 @@ scintillua.styles.error=fore:$(scintillua.colors.red),italics
 scintillua.styles.function=
 scintillua.styles.function.builtin=fore:$(scintillua.colors.blue)
 scintillua.styles.function.method=
+scintillua.styles.heading=fore:$(scintillua.colors.yellow)
 scintillua.styles.identifier=
 scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.dark_white)
@@ -89,7 +90,6 @@ scintillua.styles.reference=underlined
 scintillua.styles.regex=fore:$(scintillua.colors.light_green)
 scintillua.styles.string=fore:$(scintillua.colors.green)
 scintillua.styles.tag=fore:$(scintillua.colors.dark_white)
-scintillua.styles.title=fore:$(scintillua.colors.yellow)
 scintillua.styles.type=fore:$(scintillua.colors.lavender)
 scintillua.styles.underline=underlined
 scintillua.styles.variable=
