--- a/themes/scite.properties
+++ b/themes/scite.properties
@@ -44,6 +44,7 @@ scintillua.styles.error=fore:$(scintillua.colors.red)
 scintillua.styles.function=
 scintillua.styles.function.builtin=fore:$(scintillua.colors.black),bold
 scintillua.styles.function.method=
+scintillua.styles.heading=
 scintillua.styles.identifier=
 scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.blue),bold
@@ -56,7 +57,6 @@ scintillua.styles.reference=underlined
 scintillua.styles.regex=$(scintillua.styles.string)
 scintillua.styles.string=fore:$(scintillua.colors.purple)
 scintillua.styles.tag=fore:$(scintillua.colors.blue)
-scintillua.styles.title=
 scintillua.styles.type=fore:$(scintillua.colors.blue)
 scintillua.styles.underline=
 scintillua.styles.variable=
