--- a/themes/light.properties
+++ b/themes/light.properties
@@ -77,6 +77,7 @@ scintillua.styles.error=fore:$(scintillua.colors.red),italics
 scintillua.styles.function=
 scintillua.styles.function.builtin=fore:$(scintillua.colors.dark_orange)
 scintillua.styles.function.method=
+scintillua.styles.heading=fore:$(scintillua.colors.purple)
 scintillua.styles.identifier=
 scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.dark_blue)
@@ -89,7 +90,6 @@ scintillua.styles.reference=underlined
 scintillua.styles.regex=fore:$(scintillua.colors.dark_green)
 scintillua.styles.string=fore:$(scintillua.colors.green)
 scintillua.styles.tag=fore:$(scintillua.colors.dark_blue)
-scintillua.styles.title=fore:$(scintillua.colors.purple)
 scintillua.styles.type=fore:$(scintillua.colors.dark_lavender)
 scintillua.styles.underline=underlined
 scintillua.styles.variable=
