Refreshed color themes. Light and dark share a smaller, simpler color palette.

--- a/themes/light.properties
+++ b/themes/light.properties
@@ -1,52 +1,25 @@
 # Copyright 2006-2022 Mitchell. See LICENSE.
 # Light theme for Scintillua.
-# Contributions by Ana Balan.
 
 # Greyscale colors.
-scintillua.colors.dark_black=#000000
 scintillua.colors.black=#1A1A1A
 scintillua.colors.light_black=#333333
-scintillua.colors.grey_black=#4D4D4D
 scintillua.colors.dark_grey=#666666
-scintillua.colors.grey=#808080
-scintillua.colors.light_grey=#999999
-scintillua.colors.grey_white=#B3B3B3
-scintillua.colors.dark_white=#CCCCCC
-scintillua.colors.white=#E6E6E6
-scintillua.colors.light_white=#FFFFFF
-
-# Dark colors.
-scintillua.colors.dark_red=#661A1A
-scintillua.colors.dark_yellow=#66661A
-scintillua.colors.dark_green=#1A661A
-scintillua.colors.dark_teal=#1A6666
-scintillua.colors.dark_purple=#661A66
-scintillua.colors.dark_orange=#B3661A
-scintillua.colors.dark_pink=#B36666
-scintillua.colors.dark_lavender=#6666B3
-scintillua.colors.dark_blue=#1A66B3
+scintillua.colors.grey=#999999
+scintillua.colors.light_grey=#CCCCCC
+scintillua.colors.white=#FFFFFF
 
 # Normal colors.
-scintillua.colors.red=#994D4D
-scintillua.colors.yellow=#99994D
-scintillua.colors.green=#4D994D
-scintillua.colors.teal=#4D9999
-scintillua.colors.purple=#994D99
-scintillua.colors.orange=#E6994D
-scintillua.colors.pink=#E69999
-scintillua.colors.lavender=#9999E6
-scintillua.colors.blue=#4D99E6
-
-# Light colors.
-scintillua.colors.light_red=#C08080
-scintillua.colors.light_yellow=#CCCC80
-scintillua.colors.light_green=#80CC80
-scintillua.colors.light_teal=#80CCCC
-scintillua.colors.light_purple=#CC80CC
-scintillua.colors.light_orange=#FFCC80
-scintillua.colors.light_pink=#FFCCCC
-scintillua.colors.light_lavender=#CCCCFF
-scintillua.colors.light_blue=#80CCFF
+scintillua.colors.red=#990000
+scintillua.colors.orange=#CC6600
+scintillua.colors.yellow=#999900
+scintillua.colors.lime=#99CC00
+scintillua.colors.green=#009900
+scintillua.colors.teal=#009999
+scintillua.colors.blue=#0066CC
+scintillua.colors.violet=#6600CC
+scintillua.colors.purple=#990099
+scintillua.colors.magenta=#CC0066
 
 # Default font.
 if PLAT_WIN
@@ -55,45 +28,45 @@ if PLAT_GTK
   scintillua.styles.font.base=font:Monospace,size:10
 
 # Predefined styles.
-scintillua.styles.default=$(scintillua.styles.font.base),fore:$(scintillua.colors.light_black),back:$(scintillua.colors.white)
-scintillua.styles.line_number=fore:$(scintillua.colors.grey),back:$(scintillua.colors.white)
-scintillua.styles.brace_light=fore:$(scintillua.colors.light_blue)
-scintillua.styles.brace_bad=fore:$(scintillua.colors.light_red)
+scintillua.styles.default=$(scintillua.styles.font.base),fore:$(scintillua.colors.black),back:$(scintillua.colors.white)
+scintillua.styles.line_number=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.white)
+scintillua.styles.brace_light=fore:$(scintillua.colors.blue),bold
+scintillua.styles.brace_bad=fore:$(scintillua.colors.red)
 scintillua.styles.control_char=
-scintillua.styles.indent_guide=fore:$(scintillua.colors.dark_white)
-scintillua.styles.call_tip=fore:$(scintillua.colors.light_black),back:$(scintillua.colors.dark_white)
-scintillua.styles.fold_display_text=fore:$(scintillua.colors.grey)
+scintillua.styles.indent_guide=fore:$(scintillua.colors.light_grey)
+scintillua.styles.call_tip=fore:$(scintillua.colors.black),back:$(scintillua.colors.light_grey)
+scintillua.styles.fold_display_text=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.light_grey)
 
 # Tag styles.
-scintillua.styles.attribute=fore:$(scintillua.colors.dark_lavender)
+scintillua.styles.attribute=fore:$(scintillua.colors.violet)
 scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.yellow)
-scintillua.styles.code=back:$(scintillua.colors.dark_white),eolfilled=true
-scintillua.styles.comment=fore:$(scintillua.colors.grey)
+scintillua.styles.code=back:$(scintillua.colors.light_grey),eolfilled=true
+scintillua.styles.comment=fore:$(scintillua.colors.dark_grey)
 scintillua.styles.constant=
-scintillua.styles.constant.builtin=fore:$(scintillua.colors.dark_teal)
-scintillua.styles.embedded=back:$(scintillua.colors.dark_white)
-scintillua.styles.error=fore:$(scintillua.colors.red),italics
+scintillua.styles.constant.builtin=fore:$(scintillua.colors.magenta)
+scintillua.styles.embedded=back:$(scintillua.colors.light_grey)
+scintillua.styles.error=fore:$(scintillua.colors.red)
 scintillua.styles.function=
-scintillua.styles.function.builtin=fore:$(scintillua.colors.dark_orange)
+scintillua.styles.function.builtin=fore:$(scintillua.colors.orange)
 scintillua.styles.function.method=
 scintillua.styles.heading=fore:$(scintillua.colors.purple)
 scintillua.styles.identifier=
 scintillua.styles.italic=italics
-scintillua.styles.keyword=fore:$(scintillua.colors.dark_blue)
-scintillua.styles.label=fore:$(scintillua.colors.dark_pink)
+scintillua.styles.keyword=fore:$(scintillua.colors.blue)
+scintillua.styles.label=fore:$(scintillua.colors.purple)
 scintillua.styles.link=underlined
 scintillua.styles.number=fore:$(scintillua.colors.teal)
-scintillua.styles.operator=fore:$(scintillua.colors.purple)
-scintillua.styles.preprocessor=fore:$(scintillua.colors.dark_yellow)
+scintillua.styles.operator=
+scintillua.styles.preprocessor=fore:$(scintillua.colors.purple)
 scintillua.styles.reference=underlined
-scintillua.styles.regex=fore:$(scintillua.colors.dark_green)
+scintillua.styles.regex=fore:$(scintillua.colors.lime)
 scintillua.styles.string=fore:$(scintillua.colors.green)
-scintillua.styles.tag=fore:$(scintillua.colors.dark_blue)
-scintillua.styles.type=fore:$(scintillua.colors.dark_lavender)
+scintillua.styles.tag=fore:$(scintillua.colors.blue)
+scintillua.styles.type=fore:$(scintillua.colors.violet)
 scintillua.styles.underline=underlined
 scintillua.styles.variable=
-scintillua.styles.variable.builtin=fore:$(scintillua.colors.dark_yellow)
+scintillua.styles.variable.builtin=fore:$(scintillua.colors.yellow)
 scintillua.styles.whitespace=
 
 # CSS
