Tweaked code and embedded tag styles.

--- a/themes/light.properties
+++ b/themes/light.properties
@@ -41,11 +41,11 @@ scintillua.styles.fold_display_text=fore:$(scintillua.colors.dark_grey),back:$(s
 scintillua.styles.attribute=fore:$(scintillua.colors.violet)
 scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.yellow)
-scintillua.styles.code=back:$(scintillua.colors.light_grey),eolfilled=true
+scintillua.styles.code=fore:$(scintillua.colors.dark_grey),eolfilled
 scintillua.styles.comment=fore:$(scintillua.colors.dark_grey)
 scintillua.styles.constant=
 scintillua.styles.constant.builtin=fore:$(scintillua.colors.magenta)
-scintillua.styles.embedded=back:$(scintillua.colors.light_grey)
+scintillua.styles.embedded=fore:$(scintillua.colors.purple)
 scintillua.styles.error=fore:$(scintillua.colors.red)
 scintillua.styles.function=
 scintillua.styles.function.builtin=fore:$(scintillua.colors.orange)
